# wcnt

./: .gitattributes  Cargo.toml  LICENSE-THIRD-PARTY  README.md  doctest.sh
example/: Wcnt.toml  run_example.sh
example/data/: Limits.toml
example/data/a/: Limits.toml
example/data/c/: Limits.toml
example/data/c/c_c/: Limits.toml
src/: limits.rs  main.rs  search_for_files.rs  search_in_files.rs  settings.rs  utils.rs  warnings.rs
