[package]
name = "wcnt"
version = "0.1.0"
authors = ["Mikael Silvén <mikael@silven.nu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Toml loads our config files
toml = "0.5"
# Serde helps us deserialize into custom types
serde = { version = "1.0", features = ["derive"] }
# Ignore finds our limit files
ignore = "0.4"
# Because ignore is bad, we also need GlobSet to match our files
globset = "0.4"
# Crossbeam channels for parallel processing
crossbeam = "0.7"
crossbeam-channel = "0.3.6"
# We use Regex to search ze files:
regex = "1.0"
# Clap for parsing arguments
clap = "2.0"
# ID Arena for interning of strings
id-arena = "2.2"
# logging is good
log = "0.4"
env_logger = "0.7"

# Dev dependencies for testing
[dev-dependencies]

