[package]
name = "wcnt"
version = "0.4.0"
authors = ["Mikael Silvén <mikael@silven.nu>"]
edition = "2018"
description = "A program to count your warnings inside log files and comparing them against defined limits."

[dependencies]
# Toml loads reads and writes our config files
toml = { version = "0.5", features = ["preserve_order"] }
# To keep things in order, we need linked-hash-map
linked-hash-map = { version = "0.5", features = ["serde_impl"] }
# Serde helps us deserialize into custom types
serde = { version = "1.0", features = ["derive"] }
# Use ignore to find limits and pathfiles
ignore = "0.4"
# Because ignore is bad, we also need GlobSet to match our files
globset = "0.4"
# Crossbeam channels for parallel processing
crossbeam-channel = "0.3.6"
# Rayon for parallelism
rayon = "1.2"
# We use Regex to search ze files:
regex = "1.0"
# Clap for parsing arguments
clap = "2.0"
# ID Arena for interning of strings
id-arena = "2.2"
# logging is good
log = "0.4"
env_logger = "0.7"

# Dev dependencies for testing
[dev-dependencies]

